# Selectic

./: Cargo.toml  README.md
examples/: simple.rs
src/: error.rs  lib.rs  linux.rs  macos.rs  windows.rs
