[package]
name = "selectic"
version = "0.1.0"
edition = "2021"
authors = ["ChenZibo <qw.54@163.com>"]
description = "Selectic is a Rust library that provides a cross-platform way to retrieve user-selected content from the operating system. Currently, it focuses on obtaining selected text, but it is designed to be extensible to handle other types of selected content like images and files in the future."
readme = "README.md"
repository = "https://github.com/zibo-chen/Selectic"
license = "MIT"


[dependencies]
log = "0.4"
thiserror = "1.0"

# Conditional dependencies for macOS
[target.'cfg(target_os = "macos")'.dependencies]
accessibility-ng = "0.1"
accessibility-sys-ng = "0.1"
core-foundation = "0.9"

# Conditional dependencies for Windows
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
] }
enigo = "0.3.0"
arboard = "3.4.1"

# Conditional dependencies for Linux
[target.'cfg(target_os = "linux")'.dependencies]
x11-clipboard = "0.9.3"
wl-clipboard-rs = "0.9.1"

[dev-dependencies]
simple_logger = "4.0"
